--- a/db.conf
+++ b/db.conf
@@ -2,9 +2,9 @@ input{
 	jdbc{
 	clean_run => true
 		jdbc_connection_string => "jdbc:mysql://localhost:3306/world"
-		jdbc_user => "root"
-		jdbc_password => "root"
-		jdbc_driver_library => "C:/elastic/logstash-7.6.1/logstash-7.6.1/drivers/com.mysql.jdbc_5.1.5.jar"
+		jdbc_user => "admin"
+		jdbc_password => "password"
+		jdbc_driver_library => "E:\elastic\logstash-7.8.0\logstash-7.8.0\bin\mysql-connector-java-8.0.20.jar"
 		jdbc_driver_class => "com.mysql.jdbc.Driver"
 		statement => "SELECT * FROM city"
 	}
