Update and rename db3.conf to db_sync.conf

--- a/db_sync.conf
+++ b/db_sync.conf
@@ -1,10 +1,10 @@
 input {
   jdbc {
-    jdbc_driver_library => "C:/elastic/logstash-7.6.1/logstash-7.6.1/drivers/com.mysql.jdbc_5.1.5.jar"
+    jdbc_driver_library => "E:\elastic\logstash-7.8.0\logstash-7.8.0\bin\mysql-connector-java-8.0.20.jar"
     jdbc_driver_class => "com.mysql.jdbc.Driver"
     jdbc_connection_string => "jdbc:mysql://localhost:3306/world"
-    jdbc_user => "root"
-    jdbc_password => "root"
+    jdbc_user => "admin"
+    jdbc_password => "password"
     jdbc_paging_enabled => true
     tracking_column => "unix_ts_in_secs"
     use_column_value => true
